en passant is forced

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <p
               class="mt-2 hidden text-center text-2xl text-slate-500 dark:text-slate-400 sm:block"
             >
-              In the Bay Area, we found that it was difficult to find accessible engineering events for high schoolers. We wanted to change that. In Mechanicon, we aim to inspire the next generation of high schoolers to be interested in engineering and STEM.
+              In the Bay Area, we found that it was difficult to find accessible engineering events for students. We wanted to change that. In Mechanicon, we aim to inspire the next generation of students to be interested in engineering and STEM.
             </p>
             
           </li>
