--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <p>
               ______________
             </p>
-            <a href="Link">Signups</a>
+            <a href="https://forms.gle/tm4xSgf2HGtaMCFY6">Signups</a>
           </li>
           
         </ul>
