--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
             >Home</a
           >
           <a href="#projects" class="w-full py-6 text-center hover:opacity-90"
-            >Projects</a
+            >What is Mechanicon?</a
           >
           <a href="#about" class="w-full py-6 text-center hover:opacity-90"
-            >About Us</a
+            >Details</a
           >
           <!--a href="#contact" class="w-full py-6 text-center hover:opacity-90"
             >Contact Us</a
