--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
           >
             In 2023's Mechanicon, we challenge you to innovate the next solutions for natural disasters.
           </p>
+          <a href="https://forms.gle/tm4xSgf2HGtaMCFY6">Signup!</a>
         </article>
         <img
           class="w-1/2"
