--- a/index.html
+++ b/index.html
@@ -392,9 +392,8 @@
       >
         <address>
           <h2>Mechanicon 2023</h2>
-          Vin Shin, Kevin Tang, Claire Xu,<br />
-          Marvin Lin, Samuel Lopez, Nikaash Bahl,<br />
-          Ryan Wu, and Abrianna Zhang.<br />
+          Vin Shin, Kevin Tang, Daniel Herrera Vicioso,<br />
+          Benjamin Tran, Siddarth Kota,<br />
           Pleasanton, California<br />
           Email:
           <a href="mechaniconhacks@gmail.com">mechaniconhacks@gmail.com</a><br />
